# core

./: .autom4te.cfg  .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
buildtools/: .gitignore  keyring.tar.enc
buildtools/ci/: before_install  build
docker/: .dockerignore  Makefile.am  tau-packaging.g1.gpg  tau-root-ca.g1.crt
docker/core/: Dockerfile  Makefile.am
